--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
       <!-- main css fil that generated from sass -->
    <link rel="stylesheet" href="./assest/css/index.css">
    <!-- add icon -->
-    <link rel="shortcut icon" href="./assest/image/download (1).png" type="image/x-icon">
+   <link rel="shortcut icon" href="./assest/image/grid/download (3).jfif" type="image/x-icon">
 </head>
 <body>
     <!-- parde aval -->
   <section class="layout">
     <div class="layout__lay">
-        <a href="./home.html">
+        <a href="./grid.html">
         <h2>NARS</h2>
         </a>
     </div>
