--- a/eyes-shadow.html
+++ b/eyes-shadow.html
@@ -8,7 +8,7 @@
     <!-- main css fil that generated from sass -->
     <link rel="stylesheet" href="./assest/css/home.css">
     <!-- add icon -->
-    <link rel="shortcut icon" href="./assest/image/download (1).png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assest/image/grid/download (3).jfif" type="image/x-icon">
     <!-- animation -->
     <link rel="stylesheet" href="./assest/css/animate.css">
     <!-- font awsome -->
