--- a/grid.html
+++ b/grid.html
@@ -21,39 +21,39 @@
     <div class="item">
 
    <div class="item__one item__two">
- <a href="./home.html"><h2>NARS</h2></a>
+ <a href="./home.html"><h2 class="hvr-grow">NARS</h2></a>
    </div>
 
    <div class="item__one item__three">
-   <a href="./blusher.html"><h2>BLUSHER</h2></a>
+   <a href="./blusher.html"><h2 class="hvr-grow">BLUSHER</h2></a>
    </div>
 
    <div class="item__one item__four">
-   <a href="./foundation.html"> <img src="./assest/image/grid/OIP (2).jfif" alt="" class="item__one__imag"></a>
+   <a href="./foundation.html"> <img src="./assest/image/grid/OIP (2).jfif" alt="" class="item__one__imag hvr-grow"></a>
    </div>
 
    <div class="item__one item__five">
-  <a href="./mascara.html"> <h2>MASCARA</h2></a>
+  <a href="./mascara.html"> <h2 class="hvr-grow">MASCARA</h2></a>
    </div>
 
    <div class="item__one item__eight">
-    <a href="./lipstick.html"><img src="./assest/image/grid/OIP (4).jfif" alt="" class="item__one__image"></a>
+    <a href="./lipstick.html"><img src="./assest/image/grid/OIP (4).jfif" alt="" class="item__one__image hvr-grow"></a>
    </div>
 
    <div class="item__one item__six">
-    <a href="./conceler.html"><h2>concealer</h2></a>
+    <a href="./conceler.html"><h2 class="hvr-grow">concealer</h2></a>
    </div>
 
    <div class="item__one item__seven">
-   <a href="./home.html"><img src="./assest/image/grid/th.jfif" alt="" class="item__one__image"></a>
+   <a href="./home.html"><img src="./assest/image/grid/th.jfif" alt="" class="item__one__image hvr-grow"></a>
    </div>
 
    <div class="item__one item__nine">
-    <a href="./login.html"><img src="./assest/image/grid/OIP (5).jfif" alt="" class="item__one__image"></a>
+    <a href="./login.html"><img src="./assest/image/grid/OIP (5).jfif" alt="" class="item__one__image hvr-grow"></a>
    </div>
 
    <div class="item__one item__ten">
-   <a href="./eyes-shadow.html"> <img src="./assest/image/grid/download (4).jfif" alt="" class="item__one__img"></a>
+   <a href="./eyes-shadow.html"> <img src="./assest/image/grid/download (4).jfif" alt="" class="item__one__img hvr-grow"></a>
    </div>
     </div>
 </body>
